--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
 
-              tools:context=".activity.MainActivity">
+    tools:context=".activity.MainActivity">
 
-<include layout="@layout/main_view_toolbar"/>
-    <include layout="@layout/activity_main"/>
+    <include layout="@layout/main_view_toolbar" />
+
+    <include layout="@layout/activity_main" />
 
 
 </LinearLayout>
