--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -225,7 +225,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
-                            android:text="Trip Products"
+                            android:text="Requests"
                             android:textColor="@color/colorGray"
                             android:textStyle="bold" />
 
