--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -45,7 +45,7 @@
         tools:text="Ahmed Shafeek" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/tv_check_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_4sdp"
