--- a/app/src/main/res/layout/fragment_customer_profile.xml
+++ b/app/src/main/res/layout/fragment_customer_profile.xml
@@ -30,7 +30,7 @@
                     android:paddingBottom="@dimen/_10sdp">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/iv_product"
+                        android:id="@+id/iv_avatar"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/_80sdp"
 
@@ -38,6 +38,7 @@
                         android:src="@drawable/placeholder"
                         app:civ_border_color="@color/colorGreen"
                         app:civ_border_width="@dimen/_2sdp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,10 +48,10 @@
                         android:layout_height="1dp"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:visibility="invisible"
-                        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/iv_product"
-                        app:layout_constraintTop_toTopOf="@+id/iv_product" />
+                        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
 
                     <TextView
                         android:id="@+id/tv_name"
@@ -64,11 +65,11 @@
                         android:textColor="@color/colorBlack"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/iv_product"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
                         tools:text="Ahmed Shafeek" />
 
                     <TextView
-                        android:id="@+id/tv_check_post"
+                        android:id="@+id/tv_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_location"
@@ -76,6 +77,7 @@
                         android:text="  cairo,Egypt"
                         android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@color/colorBlack2"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="@+id/tv_name"
                         app:layout_constraintStart_toStartOf="@+id/tv_name"
                         app:layout_constraintTop_toBottomOf="@+id/tv_name"
@@ -95,10 +97,10 @@
                         android:progressBackgroundTint="@color/browser_actions_divider_color"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_check_post" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_location" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/ll_done"
+                        android:id="@+id/ll_follow"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_110sdp"
@@ -113,7 +115,7 @@
 
 
                         <TextView
-                            android:id="@+id/tv_reject"
+                            android:id="@+id/tv_follow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_5sdp"
@@ -153,6 +155,7 @@
                         android:src="@drawable/followersactive" />
 
                     <TextView
+                        android:id="@+id/tv_number_of_followers"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
@@ -181,6 +184,7 @@
                         android:src="@drawable/tripsactive" />
 
                     <TextView
+                        android:id="@+id/tv_number_of_trips"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
@@ -209,6 +213,7 @@
                         android:src="@drawable/productsactive" />
 
                     <TextView
+                        android:id="@+id/tv_number_of_products"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
