--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -29,8 +29,18 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/_10sdp">
 
+                    <ProgressBar
+                        android:id="@+id/progressBar2"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageSlider"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/imageSlider" />
+
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/iv_product"
+                        android:id="@+id/iv_avatar"
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:layout_marginStart="@dimen/_18sdp"
@@ -47,10 +57,10 @@
                         android:layout_height="1dp"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:visibility="invisible"
-                        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/iv_product"
-                        app:layout_constraintTop_toTopOf="@+id/iv_product" />
+                        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
 
                     <TextView
                         android:id="@+id/tv_name"
@@ -60,10 +70,13 @@
                         android:textSize="@dimen/_10sdp"
                         app:layout_constraintBottom_toTopOf="@+id/guildLine"
                         app:layout_constraintStart_toStartOf="@+id/guildLine"
-                        tools:text="Ahmed Shafeek" />
+                        tools:text="Ahmed Shafeek"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:background="?android:attr/selectableItemBackground"/>
 
                     <TextView
-                        android:id="@+id/tv_check_post"
+                        android:id="@+id/tv_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
@@ -90,9 +103,9 @@
                         android:layout_marginEnd="@dimen/_18sdp"
                         android:src="@drawable/germany_livetrip"
                         app:civ_border_color="@color/colorGray2"
-                        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/iv_product" />
+                        app:layout_constraintTop_toTopOf="@id/iv_avatar" />
 
                     <ImageView
                         android:id="@+id/iv_fly"
@@ -101,10 +114,10 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:src="@drawable/planepost"
-                        app:layout_constraintBottom_toTopOf="@+id/iv_product_image"
-                        app:layout_constraintEnd_toEndOf="@+id/iv_product"
-                        app:layout_constraintStart_toStartOf="@+id/iv_product"
-                        app:layout_constraintTop_toBottomOf="@+id/iv_product" />
+                        app:layout_constraintBottom_toTopOf="@+id/imageSlider"
+                        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
+                        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
+                        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
 
                     <View
                         android:id="@+id/guildLine2"
@@ -176,17 +189,37 @@
                         tools:text="Macy's"
                         android:gravity="center" />
 
-                    <ImageView
-                        android:id="@+id/iv_product_image"
+<!--                    <ImageView-->
+<!--                        android:id="@+id/iv_product_image"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="10dp"-->
+<!--                        android:adjustViewBounds="true"-->
+<!--                        android:scaleType="fitStart"-->
+<!--                        android:src="@drawable/placeholder"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/tv_brand_name" />-->
+
+                    <com.smarteist.autoimageslider.SliderView
+                        android:id="@+id/imageSlider"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitStart"
-                        android:src="@drawable/placeholder"
+                        android:layout_height="400dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_brand_name" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_brand_name"
+                        app:sliderAnimationDuration="600"
+                        app:sliderCircularHandlerEnabled="false"
+                        app:sliderIndicatorAnimationDuration="0"
+                        app:sliderIndicatorGravity="center_horizontal|bottom"
+                        app:sliderIndicatorMargin="15dp"
+                        app:sliderIndicatorOrientation="horizontal"
+                        app:sliderIndicatorPadding="3dp"
+                        app:sliderIndicatorRadius="2dp"
+                        app:sliderIndicatorSelectedColor="#5A5A5A"
+                        app:sliderIndicatorUnselectedColor="#f2f2f2" >
+
+                    </com.smarteist.autoimageslider.SliderView>
 
                     <!-- <TextView
                          android:layout_width="wrap_content"
@@ -196,8 +229,8 @@
                          android:background="@drawable/shap_btn"
                          android:padding="@dimen/_5sdp"
                          android:backgroundTint="@color/colorGreen"
-                         app:layout_constraintEnd_toEndOf="@+id/iv_product_image"
-                         app:layout_constraintBottom_toBottomOf="@+id/iv_product_image"
+                         app:layout_constraintEnd_toEndOf="@+id/imageSlider"
+                         app:layout_constraintBottom_toBottomOf="@+id/imageSlider"
                          android:layout_margin="@dimen/_14sdp"/>-->
 
                     <TextView
@@ -211,7 +244,7 @@
                         android:textColor="@color/colorGray2"
                         app:layout_constraintEnd_toStartOf="@+id/tv_category"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/iv_product_image"
+                        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                         tools:text="Product description goes here" />
 
                     <TextView
