--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -12,7 +12,7 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/iv_product"
+        android:id="@+id/iv_avatar"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginStart="@dimen/_18sdp"
@@ -29,10 +29,10 @@
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/_5sdp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_product"
-        app:layout_constraintTop_toTopOf="@+id/iv_product" />
+        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -45,7 +45,7 @@
         tools:text="Ahmed Shafeek" />
 
     <TextView
-        android:id="@+id/tv_check_post"
+        android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_4sdp"
@@ -72,9 +72,9 @@
         android:layout_marginEnd="@dimen/_18sdp"
         android:src="@drawable/placeholder"
         app:civ_border_color="@color/colorGray2"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_product" />
+        app:layout_constraintTop_toTopOf="@id/iv_avatar" />
 
     <ImageView
         android:id="@+id/iv_fly"
@@ -82,9 +82,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:src="@drawable/planepost"
-        app:layout_constraintEnd_toEndOf="@+id/iv_product"
-        app:layout_constraintStart_toStartOf="@+id/iv_product"
-        app:layout_constraintTop_toBottomOf="@+id/iv_product" />
+        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
+        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
+        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
 
 
     <View
