--- a/app/src/main/res/menu/bottom_navigation_hunter.xml
+++ b/app/src/main/res/menu/bottom_navigation_hunter.xml
@@ -41,7 +41,6 @@
         android:enabled="true"
         android:icon="@mipmap/ic_account"
         android:title="Account"
-        app:showAsAction="withText"
-        android:visible="false"  />
+        app:showAsAction="withText" />
 
 </menu>
