commit live trips

--- a/app/src/main/res/menu/bottom_navigation_customer.xml
+++ b/app/src/main/res/menu/bottom_navigation_customer.xml
@@ -24,7 +24,7 @@
         android:icon="@mipmap/ic_hot"
         android:title="Live Trips"
         app:showAsAction="withText"
-        android:visible="false"  />
+        android:visible="true"  />
 
 
     <item
